# network-orchestration-for-aws-transit-gateway

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  sonar-project.properties
source/lambda/: .coveragerc  .pylintrc  README.md  poetry.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  testing_requirements.txt
source/lambda/custom_resource/: index.py  main.py
source/lambda/custom_resource/__tests__/: test_cloudwatch_events.py  test_console_deployment.py  test_custom_resource_helper.py  test_s3.py  test_step_functions.py
source/lambda/custom_resource/lib/: cloudwatch_events.py  console_deployment.py  custom_resource_helper.py  s3.py  step_functions.py  utils.py
source/lambda/solution/custom_resource/: main.py
source/lambda/solution/metrics_collector/: handler.py  main.py
source/lambda/solution/tgw_peering_attachment/: main.py
source/lambda/solution/tgw_vpc_attachment/: main.py
source/lambda/state_machine/: index.py  state_machine_handler.py
source/lambda/state_machine/__tests__/: __init__.py  conftest.py  test_approval_notification_handler.py  test_cloudwatch_logs.py  test_dynamodb_handler.py  test_ec2.py  test_general_functions_handler.py  test_index.py  test_organizations.py  test_ram_handler.py  test_state_machine_handler.py
source/lambda/state_machine/lib/: assume_role_helper.py  boto3_config.py  cloud_watch_logs.py  dynamodb.py  ec2.py  exceptions.py  organizations.py  ram.py  sns.py  sts.py
source/lambda/state_machine/utils/: helper.py  logger.py  metrics.py  string_manipulation.py
source/lambda/tests/custom_resource/: conftest.py  test_cloudwatch_events.py  test_console_deployment.py  test_custom_resource_helper.py  test_step_functions.py
source/lambda/tests/metrics_collector/: conftest.py  test_main.py  test_metrics_collector.py
source/lambda/tgw_peering/: index.py
source/lambda/tgw_peering_attachment/: main.py
source/lambda/tgw_vpc_attachment/: main.py
(+309 files in other folders)
