[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "network-orchestration-for-tgw"
version = "3.3.13"
description = "solution packages for network-orchestration-for-tgw"
requires-python = ">=3.10"
license = { text = "Apache Software License" }
dependencies = [
    "boto3==1.34.91",
    "botocore==1.34.129",
    "aws-lambda-powertools==2.25.0",
]
[project.optional-dependencies]
dev = [
    "moto==4.2.0",
    "pytest==7.4.2",
    "mypy-boto3-ec2==1.34.149",
    "mypy-boto3-dynamodb==1.34.148",
    "mypy-boto3-sts==1.34.0",
    "mypy-boto3-sns==1.34.121",
    "mypy-boto3-ram==1.34.0",
    "mypy-boto3-organizations==1.34.139"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_resource*", "tgw_vpc_attachment*", "tgw_peering_attachment*"]