[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "solution"
version = "3.3.22"
authors = [ { name = "Amazon Web Services" }]
description = "solution packages for network-orchestration-for-tgw"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
boto3 = "^1.34.91"
botocore = "^1.34.129"
aws-lambda-powertools = "^2.25.0"
boto3-stubs = { extras = ["essential", "ram", "sts", "sns", "organizations", "stepfunctions", "lambda", "ec2", "logs"], version = "^1.38.23" }
aws-lambda-typing = "^2.20.0"

[tool.poetry.group.dev.dependencies]
moto = "^4.2.0"
pytest = "^7.4.2"
typing_extensions = "^4.8.0"
aws_lambda_typing = "^2.18.0"
freezegun = "^1.2.2"
pytest-mock = "3.11.1"
mock = "^5.2.0"
coverage = "^7.8.2"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__tests__/*",
    ".venv/*",
    ".venv-test/*"
    ]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"

